优化部分代码规范